SERVER-47263 dryrun election failure logging - removed inaccurate portion of log message

(cherry picked from commit e24e32fc7e4fc69c856ba8999163c1aa40d32b4c)